[gd_scene load_steps=8 format=3 uid="uid://b2nv7a00yb7ht"]

[ext_resource type="Script" path="res://ui/components/village/hero_display_container.gd" id="1_gxmu3"]
[ext_resource type="Texture2D" uid="uid://cdmktjrcwdpnp" path="res://ui/assets/rpg_mmo_ui/Textures/Lobby/Character Create/Frame/Lobby_CharacterCreate_Frame_Background.png" id="1_pecw1"]
[ext_resource type="PackedScene" uid="uid://dmlpki78nue5y" path="res://characters/heroes/hero_cosmetics.tscn" id="2_lbfvb"]
[ext_resource type="Texture2D" uid="uid://bgnirnu7unxnr" path="res://ui/assets/rpg_mmo_ui/Textures/Miscellaneous/Text Box Icons/Icon_Symbol.png" id="3_0ad0o"]
[ext_resource type="Texture2D" uid="uid://d0ogk8bbowb0t" path="res://environment/assets/rpg_summer_tileset/PNG/bg.png" id="3_k0xvu"]
[ext_resource type="PackedScene" uid="uid://ddwxf46xkoy44" path="res://ui/components/village/hero_stat_line.tscn" id="4_lrmwr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xdmj7"]
texture = ExtResource("1_pecw1")

[node name="HeroDisplayContainer" type="MarginContainer"]
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20
script = ExtResource("1_gxmu3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(600, 900)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xdmj7")

[node name="AvatarContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/AvatarContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 80

[node name="AvatarTextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/PanelContainer/AvatarContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 550)
layout_mode = 2
texture = ExtResource("3_k0xvu")
expand_mode = 5
stretch_mode = 6

[node name="HeroCosmetics" parent="VBoxContainer/HBoxContainer/PanelContainer" instance=ExtResource("2_lbfvb")]
unique_name_in_owner = true
position = Vector2(320, 388.5)
scale = Vector2(2, 2)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 40
text = "SWITCH
"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 30

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 80
text = "Name"

[node name="Tier" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_0ad0o")
expand_mode = 3
stretch_mode = 5

[node name="Gender" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_lrmwr")]
unique_name_in_owner = true
visible = false
layout_mode = 2
Name = "Gender"
Value = "Male"

[node name="Type" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_lrmwr")]
unique_name_in_owner = true
layout_mode = 2
Name = "Type"
Value = "Fighter"

[node name="Health" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_lrmwr")]
unique_name_in_owner = true
layout_mode = 2
Name = "Health"
Value = "125"

[node name="Attack" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_lrmwr")]
unique_name_in_owner = true
layout_mode = 2
Name = "Attack"
Value = "60"

[node name="BioContainer" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Bio" type="Label" parent="VBoxContainer/BioContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/Button" to="." method="_on_button_pressed"]
